--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,10 @@
 					<target>1.8</target>
 				</configuration>
 			</plugin>
+		</plugins>
+	</build>
+	<reporting>
+		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-project-info-reports-plugin</artifactId>
@@ -56,5 +60,5 @@
 				</configuration>
 			</plugin>
 		</plugins>
-	</build>
+	</reporting>
 </project>
